--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,5 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
 <IfModule !mod_rewrite.c>
-ErrorDocument 404 /polimeros/index.php
+ErrorDocument 404 /maderaselgaucho/index.php
 </IfModule>
